# pfdf

./: .gitignore  .gitlab-ci.yml  .safety-policy.yml  CONTRIBUTING.md  DFHA_1_CalcStreamNet.py  DFHA_3_PackageData.py  PostFireDFAssessment_M1_Step1B_SetupPreFireStep2_ARCPRO_2022-02-08.py  PostFireDFAssessment_M1_Step1_CalcStreamNet_ARCPRO_2022-02-08.py  PostFireDFAssessment_M1_Step2_ModelCalcs_ARCPRO_2022-02-08.py  PostFireDFEstimates_README.docx  README.md  calculate.py  code.json  dem.py  dev_scripts.py  ensure.py  environment.yml  extent.py  fire.py  geodatabase.py  kernel.py  log.py  log.py.py  notify.py  options.py  original1.py  parameters.py  paths.py  pyproject.toml  states.py  step1.py  stream.py  stream_test.py  test.geojson  test_stream.py  webtext.py  working.py  working1.py  zone.py
dfha/: __init__.py  dem.py  errors.py  segments.py  severity.py  stream.py  typing.py  utils.py  validate.py  working.py
dfha/models/: staley2017.py
dftools/: arcgis.py  confine.py  prefire.py  taudem.py
dftools_original/: DFTools_ArcGIS_PRO.py
dftools_working/: DFTools_ArcGIS_PRO.py
docs/: conf.py  index.rst
docs/_static/: copyright.css
docs/api/: cannon2010.rst  driver.rst  errors.rst  gartner2014.rst  index.rst  models.rst  raster.rst  segments.rst  severity.rst  slope.rst  staley2017.rst  utils.rst  watershed.rst
docs/api/data/: index.rst
docs/api/models/: cannon2010.rst  gartner2014.rst  index.rst  staley2017.rst
docs/api/projection/: bbox.rst  crs.rst  index.rst  transform.rst
docs/api/raster/: index.rst  metadata.rst  raster.rst
docs/api/utils/: driver.rst  index.rst  intensity.rst  nodata.rst  slope.rst  units.rst
docs/guide/: arrays.rst  data.rst  glossary.rst  index.rst  watershed.rst
docs/guide/misc/: driver.rst  index.rst  severity.rst  slope.rst
docs/guide/models/: c10.rst  g14.rst  index.rst  s17.rst
docs/guide/rasters/: create.rst  index.rst  intro.rst  preprocess.rst  save.rst  spatial.rst
docs/guide/segments/: export.rst  filter.rst  index.rst  intro.rst  parallel.rst  rasters.rst  values.rst
docs/guide/utils/: driver.rst  index.rst  intensity.rst  nodata.rst  slope.rst  units.rst
docs/guide/watershed/: index.rst  severity.rst  watershed.rst
docs/resources/: citation.rst  contributing.rst  datasets.rst  dev-guide.rst  faqs.rst  installation.rst  legal.rst
docs/resources/release-notes/: 1.0.0.rst  1.1.0.rst  2.0.0.rst  2.0.1.rst  3.0.0.rst  index.rst
docs/tutorials/: advanced.rst  assessment.rst  download.rst  how-to-run.rst  index.rst  main-series.rst  parallel.rst  preprocess.rst  projections.rst  rasters.rst  sweep.rst
docs/tutorials/scripts/: assessment.py  assessment_plots.py  bounds.py  export.py  parallel.py  plot.py  preprocess.py  preprocess_plots.py  rasters.py  sweep.py  transform.py
pfdf/: __init__.py  _nodata.py  _rasters.py  _utils.py  _validate.py  dem.py  errors.py  raster.py  rasters.py  segments.py  severity.py  typing.py  validate.py  watershed.py
pfdf/_utils/: __init__.py  _misc.py  basins.py  buffers.py  classify.py  clip.py  dataframe.py  features.py  kernel.py  nodata.py  nodata_.py  patches.py  slug.py  transform.py  validate.py  window.py
pfdf/_validate/: __init__.py  _buffers.py  _misc.py  projection.py
pfdf/_validate/core/: __init__.py  _array.py  _buffers.py  _elements.py  _features.py  _misc.py  _path.py  _units.py  _url.py
pfdf/_validate/raster/: __init__.py  _preprocess.py
pfdf/data/: __init__.py
pfdf/data/_utils/: __init__.py  _unzip.py  requests.py  validate.py
pfdf/data/landfire/: __init__.py  _api.py  _landfire.py  _validate.py  api.py
pfdf/data/noaa/: __init__.py  atlas14.py
pfdf/data/retainments/: __init__.py  la_county.py
pfdf/data/usgs/: __init__.py  (+1 more)
pfdf/models/: __init__.py  cannon2010.py  gartner2014.py  staley2017.py
pfdf/projection/: __init__.py  _bbox.py  _crs.py  _locator.py  _transform.py  bbox.py  crs.py  transform.py
pfdf/raster/: __init__.py  _align.py  _clip.py  _features.py  _merror.py  _metadata.py  _parse.py  _raster.py  _validate.py  _window.py
pfdf/segments/: __init__.py  _basins.py  _confinement.py  _segments.py  _update.py
pfdf/typing/: __init__.py  core.py  models.py  raster.py  segments.py
pfdf/utils/: __init__.py  driver.py  intensity.py  nodata.py  slope.py  units.py
scripts/: __init__.py  dev.py  docs.py  pipeline.py  poetry.py  tutorials.py
tests/: __init__.py  conftest.py  test_dem.py  test_dem2.py  test_errors.py  test_nodata.py  test_raster.py  test_rasters_private.py  test_rasters_public.py  test_segments.py  test_severity.py  test_stream.py  test_utils.py  test_validate.py  test_watershed.py
tests/_utils/: test_align.py  test_basins.py  test_buffers.py  test_classify.py  test_clip.py  test_dataframe.py  test_features.py  test_init.py  test_kernel.py  test_misc.py  test_nodata.py  test_patches.py  test_slug.py  test_transform.py  test_units.py  test_validate.py  test_window.py
tests/_validate/: test_array.py  test_buffers.py  test_elements.py  test_misc.py  test_projection.py
tests/arcpy/: test_stream.py
tests/data/: conftest.py
tests/models/: test_cannon2010.py  test_gartner2014.py  test_staley2017.py
tests/projection/: test_bbox.py  test_crs.py  test_transform.py
tests/raster/: conftest.py  test_align.py  test_clip.py  test_features.py  test_merror.py  test_metadata.py  test_parse.py  test_raster.py  test_validate_raster.py  test_window.py
tests/segments/: conftest.py  test_basins.py  test_confinement.py  test_segments.py  test_update.py
tests/utils/: test_driver.py  test_intensity.py  test_public_nodata.py  test_public_units.py  test_slope.py
tutorials/: 01_Start_Here.ipynb  02_Raster_Intro.ipynb  03_Download_Data.ipynb  04_Preprocessing.ipynb  05_Hazard_Assessment.ipynb  06_Raster_Properties.ipynb  07_Raster_Factories.ipynb  08_Spatial_Metadata.ipynb  09_RasterMetadata_Class.ipynb  10_Parallel_Basins.ipynb  11_Parameter_Sweep.ipynb
tutorials/check_installation/: __init__.py
tutorials/data/: dnbr.tif  perimeter.geojson
tutorials/tools/: __init__.py  _print.py  examples.py  plot.py  workspace.py
(+112 files in other folders)
