[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pfdf"
version = "1.0.0"
description = "A package to facilitate post-wildfire debris-flow hazard assessments and research"
authors = [
    "Jonathan King <jking@usgs.gov>",
    "Dennis Staley <dstaley@usgs.gov>"
]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://code.usgs.gov/ghsc/lhp/pfdf"
keywords = ["wildfire", "debris flow", "hazard", "usgs"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]
packages = [
    { include = "pfdf" },
]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
numpy = "*"
nptyping = "*"
pysheds = "*"
numba = "^0.57"
rasterio = "*"
affine = "*"
shapely = "*"
fiona = "*"
scipy = "^1.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
pytest-cov = "*"
coverage = "*"
safety = "^2.1.1"

[tool.poetry.scripts]
tests = "scripts.dev:tests"
format = "scripts.dev:format"
lint = "scripts.dev:lint"
pipeline = "scripts.dev:pipeline"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:nptyping.typing_",
    "ignore::DeprecationWarning:rasterio",
    "ignore::DeprecationWarning:pysheds.sview",
    "ignore::DeprecationWarning:pysheds.sgrid",
    "ignore::DeprecationWarning:numba.core.typing.context",
]

[tool.isort]
profile = "black"