[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pfdf"
version = "1.1.0"
description = "A package to facilitate post-wildfire debris-flow hazard assessments and research"
authors = [
    "Jonathan King <jking@usgs.gov>",
    "Dennis Staley <dstaley@usgs.gov>"
]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://code.usgs.gov/ghsc/lhp/pfdf"
keywords = ["wildfire", "debris flow", "hazard", "usgs"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]
packages = [
    { include = "pfdf" },
]

[tool.poetry.dependencies]
# Core dependencies
python = ">=3.11, <3.13"
numpy = "<2"
nptyping = "*"
pysheds = "0.3.5"
numba = "*"
rasterio = "*"
affine = "*"
shapely = "*"
fiona = "*"

# Tutorial plots
cartopy = { version = ">=0.22", optional = true }
matplotlib = { version = ">=3.8.2", optional = true }

[tool.poetry.extras]
tutorials = ["cartopy", "matplotlib"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = ">=24.3.0"
isort = "^5.12.0"
pytest-cov = "*"
coverage = "*"
safety = "^2.1.1"
sphinx = ">=7.2.6"
sphinx-rtd-theme = ">=1.3.0"
sphinx_design = ">=0.5"

[tool.poetry.scripts]
tests = "scripts.dev:tests"
format = "scripts.dev:format"
lint = "scripts.dev:lint"
docs = "scripts.docs:build"
open = "scripts.docs:open_docs"
rebuild = "scripts.docs:rebuild"
download_tutorials = "scripts.docs:download_tutorials"
figures = "scripts.docs:figures"
version = "scripts.docs:check_version"
pipeline = "scripts.pipeline:pipeline"
docs_pipeline = "scripts.pipeline:docs_pipeline"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:nptyping.typing_",
    "ignore::DeprecationWarning:pysheds.sgrid",
    "ignore::DeprecationWarning:pysheds.sview",
    "ignore::DeprecationWarning:numba.core.typing.context",
]

[tool.isort]
profile = "black"